--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
         <img class="menu-opener" src="assets/images/menu.png" />
         <nav>
           <ul class="link">
-            <li class="active"><a href="">Home</a></li>
-            <li class="active"><a href="">About us</a></li>
-            <li class="active"><a href="">Services</a></li>
-            <li class="active"><a href="">Our Projects</a></li>
-            <li class="active"><a href="">Our Team</a></li>
-            <li class="active"><a href="">Happy Clients</a></li>
+            <li class="active"><a href="#banner1" class="selected">Home</a></li>
+            <li class="active"><a href="#banner2">About us</a></li>
+            <li class="active"><a href="#banner3">Services</a></li>
+            <li class="active"><a href="#banner4">Our Projects</a></li>
+            <li class="active"><a href="#banner5">Our Team</a></li>
+            <li class="active"><a href="#banner6">Happy Clients</a></li>
             <li class="active"><a href="">Price</a></li>
             <li class="active"><a href="">Some Facts</a></li>
             <li class="active"><a href="">Contact Us</a></li>
@@ -36,7 +36,7 @@
     </div>
   </header>
   <main>
-    <section class="banner">
+    <section class="banner" id="banner1">
       <div class="sliders" style="margin-left: 0">
         <div class="slide">
           <div class="slidearea">
@@ -67,7 +67,7 @@
       </div>
     </section>
 
-    <section class="default light">
+    <section class="default light" id="banner2">
       <div class="section-title">About us</div>
       <div class="section-desc">Who we are?</div>
       <div class="section-body">
@@ -93,7 +93,7 @@
       </div>
     </section>
 
-    <section class="default dark">
+    <section class="default dark" id="banner3">
       <div class="section-title">Services</div>
       <div class="section-desc">Services that we provide</div>
       <div class="section-body">
@@ -122,7 +122,7 @@
       </div>
     </section>
 
-    <section class="default light">
+    <section class="default light" id="banner4">
       <div class="section-title">Our Projects</div>
       <div class="section-desc">What we create</div>
       <div class="section-body">
@@ -253,7 +253,7 @@
       </div>
     </section>
 
-    <section class="default dark bg-team">
+    <section class="default dark bg-team" id="banner5">
       <div class="section-team-area">
         <div class="section-title">Our Team</div>
         <div class="section-desc">Our Co-Workers</div>
@@ -341,7 +341,7 @@
       </div>
     </section>
 
-    <section class="default light testimonials">
+    <section class="default light testimonials" id="banner6">
       <div class="section-title">Happy Clients</div>
       <div class="section-desc">Client Reviews</div>
       <div class="section-body">
