--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <img src="https://assets.stickpng.com/images/6297316dccf362a12fe7a5dc.png" alt="">
       </div>
       <div class="menu">
-        <img class="menu-opener" src="assets/images/menu.png" />
+        <img class="menu-opener" src="6297316dccf362a12fe7a5dc.png" />
         <nav>
           <ul class="link">
             <li class="active"><a href="#banner1" class="selected">Home</a></li>
